# market-chaos-lab

./: .gitignore  CMakeLists.txt  README.md
include/: market.hpp  order.hpp  orderbook.hpp  trader.hpp
results/: price_series.csv
scripts/: plot.py
src/: main.cpp  market.cpp  orderbook.cpp  trader.cpp
